// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      0
    </p>
    <p>
      0
    </p>
  </div>
</DocumentFragment>
`;

exports[`simple 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      1
    </p>
    <p>
      1
    </p>
  </div>
</DocumentFragment>
`;

exports[`withModel 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    0
  </div>
</DocumentFragment>
`;

exports[`withModel 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;
